# workspace-mcp

./: .gitignore  README.md  pyproject.toml
.claude/skills/openbb-app-builder/: SKILL.md
.claude/skills/openbb-app-builder/references/: app-builder-index.md  backend-contract.md
.claude/skills/openbb-app-builder/references/examples/: generic-http-minimal.md  python-fastapi-minimal.md
.claude/skills/openbb-app-builder/references/guides/: build-an-app.md  (+3 more)
scripts/: run.ps1  run.sh
tests/: test_app.py  test_app_builder_skill.py  test_main.py  test_server.py  test_state.py
tests/smoke/: PROMPTS.md
workspace_mcp/: __init__.py  __main__.py  app.py  config.py  models.py  server.py  state.py
workspace_mcp/app_builder/: __init__.py  resources.py  skill_generator.py
workspace_mcp/app_builder/resources/: app-builder-index.md  backend-contract.md
workspace_mcp/app_builder/resources/examples/: generic-http-minimal.md  python-fastapi-minimal.md
workspace_mcp/app_builder/resources/guides/: build-an-app.md  convert-endpoint-to-widget.md  debug-app.md  review-app.md
workspace_mcp/app_builder/resources/overview/: ai-agent-contract.md  what-is-workspace.md
workspace_mcp/app_builder/resources/specs/: apps-json.md  layout-grid.md  widget-parameters.md  widget-types.md  widgets-json.md
workspace_mcp/app_builder/resources/validation/: common-errors.md
workspace_mcp/server/: __init__.py  _guidance.py  _helpers.py
workspace_mcp/server/tools/: __init__.py  agents.py  backends.py  dashboards.py  docs.py  generative.py  navigation.py  snapshot.py  widgets.py
(+8 files in other folders)
