[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openbb-workspace-mcp"
version = "0.1.0"
authors = [
    { name = "Theodore Aptekarev", email = "aptekarev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.2.0",
    "openbb-ai>=1.9.0",
    "pydantic>=2.12.5",
    "starlette>=1.0.0",
    "uvicorn>=0.42.0",
]

[project.scripts]
workspace-mcp = "workspace_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["workspace_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.pytest.ini_options]
pythonpath = ["."]
